@@ -1,4 +1,8 @@
 
+CXX = icl
+CC = icl
+LINK = xilink
+
 CFLAGS_COMMON = /nologo /W4 /GR /GX
 CXXFLAGS_COMMON = /nologo /W4 /GR /GX
 
